# netadainfo

./: .gitmodules  CMakeLists.txt  README.md  getIpVersion.sh  ver.h.ini
cmake/: config.cmake
src/: main.cpp  netinfo.h
